crates/toml_edit/tests/snapshots/invalid/datetime/day-zero.stderr
TOML parse error at line 1, column 15
  |
1 | foo = 1997-09-00T09:09:09.09Z
  |               ^
invalid date-time
value is out of range
